# regxstring

./: .gitignore  CMakeLists.txt  conanfile.py
src/: main.cpp  regxstring.cpp  regxstring_impl.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp  regexstringtest.cpp
